2013-03-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gas/arm/crc32-bad.d: New file.
	* gas/arm/crc32-bad.l: Likewise.
	* gas/arm/crc32-bad.s: Likewise.
	* gas/arm/crc32.d: Likewise.
	* gas/arm/crc32.s: Likewise.

2013-03-05  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/diagnostic.s: Add test.
	* gas/aarch64/diagnostic.l: Update.
	* gas/aarch64/illegal.s: Add test.
	* gas/aarch64/illegal.l: Update.
	* gas/aarch64/fpmov.s: New file.
	* gas/aarch64/fpmov.d: New file.

2013-03-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/inval.s: Add tests for invalid addresses and eiz.

	* gas/i386/x86-64-inval.s: Add tests for invalid addresses and
	riz/eiz.

	* gas/i386/inval.l: Updated.
	* gas/i386/x86-64-inval.l: Likewise.

2013-02-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run inval-rep and x86-64-inval-rep.

	* gas/i386/inval-rep.l: New file.
	* gas/i386/inval-rep.s: Likewise.
	* gas/i386/x86-64-inval-rep.l: Likewise.
	* gas/i386/x86-64-inval-rep.s: Likewise.

2013-02-28  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/crc32.s: New test.
	* gas/aarch64/crc32.d: Ditto.

2013-02-28  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/illegal.l: Delete the error message for
	msr S3_1_C13_C15_1,x7.
	* gas/aarch64/sysreg.s: Add new tests.
	* gas/aarch64/sysreg.d: Update.

2013-02-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/15159
	* gas/i386/i386.exp: Run smap and x86-64-smap.

	* gas/i386/smap.d: New file.
	* gas/i386/smap.s: likewise.
	* gas/i386/x86-64-smap.d: likewise.

2013-02-15  Markos Chandras  <markos.chandras@imgtec.com>

	* gas/metag/labelarithmetic.d: Fix the expected disassembler
	output to be in little endian format
	* gas/metag/metacore12.d: likewise
	* gas/metag/metacore21.d: likewise
	* gas/metag/metacore21ext.d: likewise
	* gas/metag/metadsp21.d: likewise
	* gas/metag/metadsp21ext.d: likewise
	* gas/metag/metafpu.d: likewise
	* gas/metag/metafpuext.d: likewise
	* gas/metag/tls.d: likewise
