@@ -52,6 +52,7 @@ if { [istarget nios2-*-*] } then {
     run_dump_test "ctl"
     run_dump_test "ret"
     run_dump_test "rotate"
+    run_dump_test "registers"
     
     run_dump_test "stw"
     run_dump_test "sth"
