@@ -1,0 +1,51 @@
+#objdump: -dr --prefix-addresses
+#name: NIOS2 registers
+
+# Test the register names
+
+.*: +file format elf32-littlenios2
+
+Disassembly of section .text:
+0+0000 <[^>]*> movi	zero,123
+0+0004 <[^>]*> movi	at,123
+0+0008 <[^>]*> movi	r2,123
+0+000c <[^>]*> movi	r3,123
+0+0010 <[^>]*> movi	r4,123
+0+0014 <[^>]*> movi	r5,123
+0+0018 <[^>]*> movi	r6,123
+0+001c <[^>]*> movi	r7,123
+0+0020 <[^>]*> movi	r8,123
+0+0024 <[^>]*> movi	r9,123
+0+0028 <[^>]*> movi	r10,123
+0+002c <[^>]*> movi	r11,123
+0+0030 <[^>]*> movi	r12,123
+0+0034 <[^>]*> movi	r13,123
+0+0038 <[^>]*> movi	r14,123
+0+003c <[^>]*> movi	r15,123
+0+0040 <[^>]*> movi	r16,123
+0+0044 <[^>]*> movi	r17,123
+0+0048 <[^>]*> movi	r18,123
+0+004c <[^>]*> movi	r19,123
+0+0050 <[^>]*> movi	r20,123
+0+0054 <[^>]*> movi	r21,123
+0+0058 <[^>]*> movi	r22,123
+0+005c <[^>]*> movi	r23,123
+0+0060 <[^>]*> movi	et,123
+0+0064 <[^>]*> movi	bt,123
+0+0068 <[^>]*> movi	gp,123
+0+006c <[^>]*> movi	sp,123
+0+0070 <[^>]*> movi	fp,123
+0+0074 <[^>]*> movi	ea,123
+0+0078 <[^>]*> movi	ba,123
+0+007c <[^>]*> movi	ra,123
+0+0080 <[^>]*> movi	zero,123
+0+0084 <[^>]*> movi	at,123
+0+0088 <[^>]*> movi	et,123
+0+008c <[^>]*> movi	bt,123
+0+0090 <[^>]*> movi	gp,123
+0+0094 <[^>]*> movi	sp,123
+0+0098 <[^>]*> movi	fp,123
+0+009c <[^>]*> movi	ea,123
+0+00a0 <[^>]*> movi	ba,123
+0+00a4 <[^>]*> movi	ba,123
+0+00a8 <[^>]*> movi	ra,123
