@@ -1,3 +1,7 @@
+2013-03-11  Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* nios2-opc.c (nios2_builtin_regs): Add sstatus alias for ba register.
+
 2013-03-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* arm-dis.c (arm_opcodes): Add entries for CRC instructions.
